Survey Form Alignment issue Commit

--- a/responsive-web-design-projects/survey-form/css/style.css
+++ b/responsive-web-design-projects/survey-form/css/style.css
@@ -25,8 +25,7 @@ textarea {
 	width: 65%;
 }
 #name, #email, #number, input, select, textarea {
-	margin: 10px 0px 0px 10px;
-	padding: 10px;
+	padding: 5px;
 }
 select {
 	padding-right: 30px;
@@ -54,7 +53,10 @@ select {
 	border-style: solid;
 	border-color: #59ACE0;
 	display: block;
-	margin: 0px auto;
+	margin: 10px auto 0px auto;
+}
+#survey-form .row {
+	margin: 20px 0px 0px 0px;
 }
 input[type="checkbox"], input[type="radio"] {
 	height: 15px;
@@ -71,5 +73,8 @@ input[type="checkbox"], input[type="radio"] {
 		width: 100%;
 		text-align: left;
 		float: none;
+	}
+	.clear-both {
+		display: none;
 	}
 }
